Fix: wrap page subtitles like titles

--- a/polaris-react/src/components/Page/components/Header/components/Title/Title.scss
+++ b/polaris-react/src/components/Page/components/Header/components/Title/Title.scss
@@ -15,6 +15,8 @@
 .SubTitle {
   margin-top: var(--p-space-1);
   color: var(--p-color-text-subdued);
+  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
+  @include text-breakword;
 
   &.SubtitleCompact {
     margin-top: 0;
